# E-Commerce-Backend

./: .gitignore  CMakeLists.txt
TestDatabase/: CMakeLists.txt  database_populate_tables.sql  database_setup.cpp  database_setup.sql  database_setup_main.cpp  db_utils.h  sql_utils.h
include/: Database.h  DatabaseInterface.h  Item.h  Product.h  User.h
include/models/: Cart.h  CartRetrieve.h  Item.h  Product.h  ProductCatalog.h  UserRetrieve.h
lib/sqlite/: CMakeLists.txt
src/database/: Database.cpp  DatabaseInterface.cpp  initialize_database.cpp
tests/: CMakeLists.txt  DatabaseTest.cpp
